--- a/css/headerdesk.css
+++ b/css/headerdesk.css
@@ -11,7 +11,8 @@ header{
     display: flex;
     justify-content:space-evenly;
     width: 100%;
-    height: 10%;
+    height: 20%;
+    background-color: black;
 }
 .fundo-logo{
     display: flex;
