--- a/css/maindesk.css
+++ b/css/maindesk.css
@@ -99,12 +99,18 @@ main{
 
 .fundo-inforprodutos{
     display: flex;
+    justify-content:start;
     flex-wrap: wrap;
     width: 100%;
     height: 110px;
+    padding: 0;
+    background-color:#fccc0e23;
     border: 2px solid #0f0f0f;
 }
 #titulo-produto{
+    display: flex;
+    justify-content: left;
+    margin-top: -0px;
     font-size: 18px;
     width: 100%;
 }
